--- a/package.json
+++ b/package.json
@@ -1,52 +1,46 @@
 {
   "name": "portfolio",
   "dependencies": {
+    "@babel/core": "^7.12.3",
     "@formspree/react": "^2.2.3",
-    "autoprefixer": "^9.7.6",
-    "classnames": "^2.2.6",
-    "dotenv": "^8.2.0",
+    "chokidar": "^3.5.2",
+    "dotenv": "^10.0.0",
     "fontsource-roboto": "^4.0.0",
-    "framer-motion": "^1.10.3",
-    "gatsby": "2.25.0",
-    "gatsby-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.4.1",
-    "gatsby-plugin-postcss": "^2.3.0",
-    "gatsby-plugin-react-helmet": "^3.3.0",
-    "gatsby-plugin-sharp": "^2.6.0",
-    "gatsby-source-contentful": "^2.3.1",
-    "gatsby-source-filesystem": "^2.3.0",
-    "gatsby-transformer-sharp": "^2.5.0",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^3.10.2",
+    "gatsby-plugin-google-analytics": "^3.10.0",
+    "gatsby-plugin-image": "^1.10.1",
+    "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-sitemap": "^4.6.0",
+    "gatsby-source-contentful": "^5.13.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.10.0",
-    "react-id-swiper": "^3.0.0",
-    "react-pdf": "^5.3.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
+    "sharp": "^0.26.0",
     "swiper": "^5.3.8",
-    "tailwindcss": "^1.4.4",
+    "tailwindcss": "^2.2.7",
     "typeface-inter": "^3.12.0"
   },
-  "devDependencies": {
-    "chalk": "^3.0.0",
-    "contentful-import": "^7.7.13",
-    "inquirer": "^7.1.0",
-    "prettier": "^1.19.1"
-  },
   "keywords": [
-    "gatsby",
-    "portfolio",
-    "contentful"
+    "gatsby"
   ],
+  "devDependencies": {
+    "autoprefixer": "^10.3.1",
+    "gatsby-plugin-postcss": "^4.10.0",
+    "postcss": "^8.3.6"
+  },
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "postinstall": "node ./bin/hello.js",
-    "start": "npm run develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "setup": "node ./bin/setup.js",
     "clean": "gatsby clean"
   }
 }
